force-app/main/default/objects/Pricing__c/Pricing__c.object-meta.xml
<CustomObject>
    <description>This handles all aspects of pricing for the various Objects that form iContract.</description>
    <label>Pricing</label>
    <nameField>
        <displayFormat>P-{YY}-{MM}-{DD}-{00000}</displayFormat>
        <label>Pricing Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>