force-app/main/default/objects/Pricing__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Which Channels this Pricing is available for.</description>
    <inlineHelpText>Which Channels this Pricing is available for.</inlineHelpText>
    <label>Channel</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>ARG</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
                <isActive>false</isActive>
                <label>Business Development</label>
            </value>
            <value>
                <fullName>Carrier</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Commercial Accounts</fullName>
                <isActive>false</isActive>
                <label>Commercial Accounts</label>
            </value>
            <value>
                <fullName>Field Sales</fullName>
                <isActive>false</isActive>
                <label>Field Sales</label>
            </value>
            <value>
                <fullName>Finance&amp;Pricing</fullName>
            </value>
            <value>
                <fullName>iMeetCentral</fullName>
            </value>
            <value>
                <fullName>Information Systems</fullName>
            </value>
            <value>
                <fullName>IST Team</fullName>
            </value>
            <value>
                <fullName>Japan</fullName>
            </value>
            <value>
                <fullName>Major Accounts</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
            <value>
                <fullName>Partners</fullName>
            </value>
            <value>
                <fullName>ReadyTalk</fullName>
            </value>
            <value>
                <fullName>Sales Engineers</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>TalkPoint</fullName>
            </value>
            <value>
                <fullName>Tier One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>