force-app/main/default/objects/Pricing__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The ending point which this Pricing is available for.</description>
    <inlineHelpText>The ending point which this Pricing is available for.</inlineHelpText>
    <label>End</label>
    <type>DateTime</type>
</CustomField>