force-app/main/default/objects/Pricing__c/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Rate</valueSetName>
    </valueSet>
</CustomField>