force-app/main/default/objects/Pricing__c/fields/Limit_Type__c.field-meta.xml
<CustomField>
    <fullName>Limit_Type__c</fullName>
    <description>If Percentage, the limits specify how much the user can discount (e.g. 25 means 25% and the limit is calculated as: ListPrice * (1 - Limit / 100.0) )

If Fixed, the limits are the specific price that the user can discount to (e.g. 0.10 means 0.11 is fine but 0.09 is outside the limit)</description>
    <inlineHelpText>Percentage: 25 means 25% and the limit is calculated as: ListPrice * (1 - Limit / 100.0)

Fixed: 0.10 means 0.11 is fine but 0.099 is not</inlineHelpText>
    <label>Limit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>