force-app/main/default/objects/Pricing__c/fields/Offering_Rate__c.field-meta.xml
<CustomField>
    <fullName>Offering_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If possible, this Pricing will be used for this Rate + Offering combination.</description>
    <inlineHelpText>If possible, this Pricing will be used for this Rate + Offering combination.</inlineHelpText>
    <label>Offering X Rate</label>
    <referenceTo>Offering_X_Rate__c</referenceTo>
    <relationshipLabel>Pricing</relationshipLabel>
    <relationshipName>Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>