force-app/main/default/objects/Pricing__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>If possible, this Pricing will be used for this Rate.</description>
    <inlineHelpText>If possible, this Pricing will be used for this Rate.</inlineHelpText>
    <label>Rate</label>
    <referenceTo>Rate__c</referenceTo>
    <relationshipLabel>Pricing</relationshipLabel>
    <relationshipName>Pricing</relationshipName>
    <type>Lookup</type>
</CustomField>