force-app/main/default/objects/Pricing__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Which Regions this Pricing is available for.</description>
    <inlineHelpText>Which Regions this Pricing is available for.</inlineHelpText>
    <label>Region</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <isActive>false</isActive>
                <label>NA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>