force-app/main/default/objects/Pricing__c/fields/RVP_Limit__c.field-meta.xml
<CustomField>
    <fullName>RVP_Limit__c</fullName>
    <description>Limit for which the logged-in user&#39;s RVP can approve.</description>
    <inlineHelpText>Limit for which the logged-in user&#39;s RVP can approve.</inlineHelpText>
    <label>RVP Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>