force-app/main/default/objects/Pricing__c/fields/Sales_Limit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Limit__c</fullName>
    <description>Limit applied to the logged-in user</description>
    <inlineHelpText>Limit applied to the logged-in user</inlineHelpText>
    <label>Sales Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>