force-app/main/default/objects/Pricing__c/fields/Subscription_Length_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Length_Minimum__c</fullName>
    <description>If specified, the amount of months the record is contracted for that is required for this pricing to be available. If not, this pricing is always available.</description>
    <inlineHelpText>If specified, the amount of months the record is contracted for that is required for this pricing to be available. If not, this pricing is always available.</inlineHelpText>
    <label>Subscription Length Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>