force-app/main/default/objects/Pricing__c/fields/SVP_Limit__c.field-meta.xml
<CustomField>
    <fullName>SVP_Limit__c</fullName>
    <description>Limit for which the logged-in user&#39;s SVP can approve. Past this, Deal Desk approval is required.</description>
    <inlineHelpText>Limit for which the logged-in user&#39;s SVP can approve. Past this, Deal Desk approval is required.</inlineHelpText>
    <label>SVP Limit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>6</scale>
    <type>Number</type>
</CustomField>