force-app/main/default/objects/Pricing__c/fields/Tier_Stop__c.field-meta.xml
<CustomField>
    <fullName>Tier_Stop__c</fullName>
    <description>If specified, this price will only be allowed if the Quantity of the priced record is less than this number. If not specified, this price is always allowed for any Quantity.</description>
    <inlineHelpText>If specified, this price will only be allowed if the Quantity of the priced record is less than this number. If not specified, this price is always allowed for any Quantity.</inlineHelpText>
    <label>Tier Stop</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>