force-app/main/default/objects/Pricing__c/validationRules/Cannot_Change_Unique_ID.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Unique_ID</fullName>
    <active>true</active>
    <description>The Unique ID is used to push data between Sandboxes and Production. If this value changed, the data could get mismatched and cause problems.</description>
    <errorConditionFormula>AND(
PRIORVALUE(Unique_ID__c) != null,
PRIORVALUE(Unique_ID__c) != &apos;&apos;,
PRIORVALUE(Unique_ID__c) != Unique_ID__c
)</errorConditionFormula>
    <errorMessage>The Unique ID is used to push data between Sandboxes and Production. If this value changed, the data could get mismatched and cause problems.</errorMessage>
</ValidationRule>