force-app/main/default/objects/Pricing__c/listViews/All_Pricing.listView-meta.xml
<ListView>
    <fullName>All_Pricing</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>List_Price__c</columns>
    <columns>Rate__c</columns>
    <columns>Offering_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pricing</label>
    <language>en_US</language>
</ListView>