force-app/main/default/objects/Pricing__c/listViews/All_Pricing_Active.listView-meta.xml
<ListView>
    <fullName>All_Pricing_Active</fullName>
    <columns>NAME</columns>
    <columns>Start__c</columns>
    <columns>End__c</columns>
    <columns>List_Price__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>End__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>All Pricing (Active)</label>
    <language>en_US</language>
</ListView>